# snapshot 0.7.7

17 Dec 2003  mipsator
 * added pmkcomp.dat in data directory.
 * moved compiler detection data in pmkcomp.dat file.
 * modified detect.c and detect.h to use data from dat file.
 * updated pmk.c and tests/comp_test.c to sync with previous changes.
 * added pmkcomp.dat support in makefile.
 * fixed makefile to use correct path (DATADIR, BINDIR).
 * fixed check_header() to also clean object files.
 * fixed prsdata_destroy() to avoid segfault when NULL is provided.
 * added missing comments, cleaned-up code.
 * added better handling of the version when unknown.

15 Dec 2003  mipsator
 * added gen_test_file() to automate test file generation in detect. 
 * improved detect_compiler() to store data about the compiler.
 * updated use of detect_compiler() in pmk.
 * added comp_test.c in tests directory.
 * fixed function detection in CHECK_HEADER.
 * added support for sudo in makefiles.
 * improved cleaning and added missing code in detect_compiler().

# snapshot 0.7.6

12 Dec 2003  mipsator
 * added tmp_open() in common.
 * updated func.c to use tmp_open().
 * changed remaining fprintf() to sterr into errorf() in common.
 * added preliminary TMPDIR stuff.
 * rewritten tmp_open() and added tmps_open() in common.
 * finished c test file randomization in func.
 * randomized temporary ac config file in ac_parse_config().
 * added detect.c and detect.h for compiler detection.
 * updated pmk to display detected compiler.

10 Dec 2003  mipsator
 * added new option to pmk to enable check build logging.
 * updated pmk man page with new -l option.

09 Dec 2003  mipsator
 * added MEMBER in CHECK_TYPE to check structure member.
 * updated pmkfile man page to sync with MEMBER addition.

06 Dec 2003  mipsator
 * moved fcopy() from pmkinstall to common.
 * add many missing code that was marked with XXX tags.
	(autoconf.c, common.c, func.c, functool.c)

# snapshot 0.7.5

30 Nov 2003 mipsator
 * added optional HEADER in CHECK_TYPE command.